[project]
version = "0.36.3"
name = "oxenai"
description = "Data version control for machine learning"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "fsspec",
    "pandas",
    "polars",
    "pyarrow",
    "requests",
    "toml",
    "tqdm",
]

[project.entry-points."fsspec.specs"]
oxen = "oxen.oxen_fs:OxenFS"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.9.2",
]
