[project]
version = "0.36.3"
name = "oxenai"
description = "Data version control for machine learning"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["oxen", "version control"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "fsspec",
    "pandas",
    "polars",
    "pyarrow",
    "requests",
    "toml",
    "tqdm",
]

[project.urls]
Homepage = "https://www.oxen.ai/"
Documentation = "https://docs.oxen.ai/"
Repository = "https://github.com/Oxen-AI/Oxen"

[project.entry-points."fsspec.specs"]
oxen = "oxen.oxen_fs:OxenFS"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = ["maturin>=1.9.2"]
