[package]
name = "Oxen"
version = "0.2.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "3.1.0", features = ["cargo"] }
indicatif = "0.17.1"
jwalk = "0.6.0"
rayon = "1.5.1"
reqwest = { version = "0.11.11", features = ["multipart", "json", "gzip", "stream"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
serde_url_params = "0.2.1"
serde_derive = "1.0"
toml = "0.5.8"
signal-hook = "0.3.13"
rpassword = "6.0"
dirs = "4.0.0"
urlencoding = "2.1.0"
http = "0.2.6"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
colored = "2.0.0"
rocksdb = { version = "0.18.0", default-features = false, features = ["lz4"] }
actix-web = { version = "4", features = ["openssl"] }
actix-files = "0.6.0"
actix-http = "3.0.4"
openssl = { version = "0.10" }
dotenv = "0.9.0"
flate2 = "1.0.23"
tar = "0.4.38"
walkdir = "2"
env_logger = "0.9.0"
log = "0.4.17"
actix-web-httpauth = "0.6.0"
futures-util = "0.3.21"
futures = "0.3.21"
threadpool = "1.8.1"
actix-service = "2.0.2"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
lazy_static = "1.4.0"
jsonwebtoken = "8"
x25519-dalek = "1.2.0"
rand = "0.8.5"
rand_core = "0.5"
derive_more = "0.99.17"
hex = "0.4.3"
filetime = "0.2.16"
bytesize = "1.1.0"
num_cpus = "1.13.1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.4"
datafusion = { version = "13.0" }
polars = { git = "https://github.com/pola-rs/polars", rev = "87f830d73053caf83b585ffabadb160f144b19f6", features = ["lazy", "parquet", "csv-file", "json", "ipc", "dtype-struct"] }
comfy-table = "6.1.0"
unicode-truncate = "0.2.0"
termion = "1.5.6"
async-compression = { version = "0.3.14", features = ["futures-io", "gzip"] }
async-tar = "0.4.2"
async-recursion = "1.0.0"
bytes = "1.2.1"
simdutf8 = "0.1.4"
difference = "2.0.0"
bytevec = "0.2.0"
async-std = "1.12.0"

[workspace]
members = ["src/cli", "src/lib", "src/server"]

[profile.release]
codegen-units = 1

[lib]
name = "liboxen"
path = "src/lib/src/lib.rs"

[[bin]]
name = "oxen"
path = "src/cli/src/main.rs"

[[bin]]
name = "oxen-server"
path = "src/server/src/main.rs"
