[package]
name = "Oxen"
version = "0.6.1"
edition = "2021"
license-file = "LICENSE"
description = "Oxen is a fast, unstructured data version control, to help version large machine learning datasets written in Rust."
homepage = "https://oxen.ai"
repository = "https://github.com/Oxen-AI/Oxen"
readme = "README.md"
keywords = ["machine-learning", "AI", "version-control"]
categories = ["command-line-utilities", "science", "multimedia", "database", "computer-vision"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0"
actix-http = "3.0.4"
actix-multipart = "0.6.0"
actix-service = "2.0.2"
actix-web = { version = "4", features = ["rustls"] }
actix-web-httpauth = "0.8.0"
approx = "0.5.1"
async-compression = { version = "0.4.0", features = ["futures-io", "gzip"] }
async-recursion = "1.0.0"
async-std = { version = "1.12.0", features = ["unstable"] }
async-tar = "0.4.2"
bytes = "1.2.1"
bytesize = "1.1.0"
bytevec = "0.2.0"
bytecount = "0.6.3"
chrono = "0.4.22"
clap = { version = "4.2.7", features = ["cargo"] }
colored = "2.0.0"
comfy-table = "6.1.0"
deadqueue = "0.2.4"
derive_more = "0.99.17"
difference = "2.0.0"
dirs = "5.0.1"
dotenv = "0.15.0"
dunce = "1"
env_logger = "0.10.0"
ffmpeg-next = "6.0.0"
filetime = "0.2.16"
flate2 = "1.0.23"
fs_extra = "1.2.0"
futures = "0.3.21"
futures-util = "0.3.21"
hex = "0.4.3"
http = "0.2.6"
indicatif = "0.17.1"
infer = "0.13.0"
ignore = "0.4"
itertools = "0.10.5"
jsonwebtoken = "8"
jwalk = "0.8.1"
lazy_static = "1.4.0"
log = "0.4.17"
minus = { version = "5.3.1", features = ["static_output", "search"] }
nom = "7.1.1"
num_cpus = "1.13.1"
magick_rust = "0.18.0"
pluralizer = "0.4.0"
polars = { version = "0.29.0", features = ["lazy", "parquet", "json", "ipc", "dtype-struct"] }
rand = "0.8.5"
rayon = "1.7.0"
reqwest = { version = "0.11.16", features = ["multipart", "json", "gzip", "stream"] }
rocksdb = { version = "0.21.0", default-features = false, features = ["lz4", "snappy", "zstd", "zlib"] }
sanitize-filename = "0.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.78"
serde_url_params = "0.2.1"
signal-hook = "0.3.13"
simdutf8 = "0.1.4"
sysinfo = "0.29.0"
tar = "0.4.38"
tempfile = "3.5.0"
threadpool = "1.8.1"
thread_local = "1.1.4"
time = { version = "0.3.20", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.8"
toml = "0.7.3"
qsv-sniffer = "0.9.2"
unicode-truncate = "0.2.0"
url = "2.2.2"
urlencoding = "2.1.0"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }

[workspace]
members = ["src/cli", "src/lib", "src/server"]

[profile.release]
codegen-units = 1

[lib]
name = "liboxen"
path = "src/lib/src/lib.rs"
doctest = false

[[bin]]
name = "oxen"
path = "src/cli/src/main.rs"

[[bin]]
name = "oxen-server"
path = "src/server/src/main.rs"
