[package]
name = "Oxen"
version = "0.36.3"
edition = "2021"
license-file = "LICENSE"
description = "Oxen is a fast, unstructured data version control, to help version large machine learning datasets written in Rust."
homepage = "https://oxen.ai"
repository = "https://github.com/Oxen-AI/Oxen"
readme = "README.md"
keywords = ["machine-learning", "AI", "version-control"]
categories = [
    "command-line-utilities",
    "science",
    "multimedia",
    "database",
    "computer-vision",
]
autotests = false

[features]
default = ["duckdb/bundled"]
docs = ["duckdb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-http = "3.4.0"
actix-multipart = "0.7.2"
actix-web = { version = "4.9.0", features = ["rustls"] }
actix-web-httpauth = "0.8.0"
approx = "0.5.1"
astral-tokio-tar = "0.5.2"
async-compression = { version = "0.4.2", features = [
    "futures-io",
    "gzip",
    "tokio",
] }
async-std = { version = "1.12.0", features = ["unstable"] }
async-tar = "0.5.0"
async-trait = "0.1.80"
arrow = "=53.4.0"
bincode = "1.3.3"
bytecount = "0.6.3"
bytes = "1.5.0"
bytesize = "1.3.0"
bytevec = "0.2.0"
chrono = "0.4.30"
clap = { version = "4.4.2", features = ["cargo", "derive"] }
colored = "2.0.4"
comfy-table = "7.0.1"
libduckdb-sys = { version = "=1.1.1" }
duckdb = { package = "duckdb", version = "=1.1.1", default-features = false, optional = true, features = [
    "serde_json",
] }
deadqueue = "0.2.4"
derive_more = { version = "1.0.0", features = ["full"] }
dialoguer = "0.11.0"
difference = "2.0.0"
dirs = "5.0.1"
dotenv = "0.15.0"
dunce = "1.0.4"
env_logger = "0.11.3"
# ffmpeg-next = { version = "6.0.0", features = ["codec", "format"] }
fd-lock = "4.0.1"
filetime = "0.2.22"
flate2 = { version = "1.1.0", default-features = false, features = ["zlib-ng"] }
fs_extra = "1.3.0"
futures = "0.3.28"
futures-util = "0.3.28"
glob = "0.3.1"
hex = "0.4.3"
http = "1.1.0"
humantime = "2.1.0"
ignore = "0.4.20"
image = "0.25.2"
indicatif = "0.17.6"
infer = "0.16.0"
itertools = "0.13.0"
jsonwebtoken = "9.3.0"
jwalk = "0.8.1"
lazy_static = "1.4.0"
lofty = "0.22.2"
log = "0.4.20"
lru = "0.14.0"
mockito = "1.1.0"
mp4 = "0.14.0"
mime = "0.3.17"
minus = { version = "5.4.0", features = ["static_output", "search"] }
num_cpus = "1.16.0"
parking_lot = "0.12.1"
par-stream = { version = "0.10.2", features = ["runtime-tokio"] }
percent-encoding = "2.1"
pluralizer = "0.4.0"
polars = { version = "0.45.0", features = [
    "lazy",
    "parquet",
    "json",
    "ipc",
    "ipc_streaming",
    "dtype-full",
] }
os_path = "0.8.0"
qsv-sniffer = "0.10.3"
r2d2 = "0.8.10"
rand = "0.8.5"
rayon = "1.7.0"
rmp-serde = "1.3.0"
redis = { version = "0.27.2", features = ["r2d2"] }
regex = "1.10.2"
reqwest = { version = "0.12.2", features = [
    "multipart",
    "json",
    "gzip",
    "stream",
] }
rocksdb = { version = "0.22.0", default-features = false, features = [
    "lz4",
    "snappy",
    "multi-threaded-cf",
] }
sanitize-filename = "0.6.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.106"
serde_url_params = "0.2.1"
serde_with = "3.13.0"
sha2 = "0.10.8"
simdutf8 = "0.1.4"
sqlparser = "0.53.0"
sql_query_builder = { version = "2.1.0", features = ["postgresql"] }
sysinfo = "0.33.0"
tar = "0.4.44"
tempfile = "3.8.0"
time = { version = "0.3.28", features = ["serde"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.8"
toml = "0.8.19"
url = "2.4.1"
urlencoding = "2.1.3"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }
zip = "2.4.1"
pathdiff = "0.2.3"


[workspace]
members = ["src/cli", "src/lib", "src/server"]

[profile.release]
codegen-units = 1
lto = true

[profile.profiling]
inherits = "release"
debug = true

[lib]
name = "liboxen"
path = "src/lib/src/lib.rs"
doctest = false
bench = false

[[bin]]
name = "oxen"
path = "src/cli/src/main.rs"
bench = false

[[bin]]
name = "oxen-server"
path = "src/server/src/main.rs"
bench = false

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
features = ["duckdb"]                       # this is without "duckdb/bundled"
no-default-features = true

[dev-dependencies]
actix-multipart-test = "0.0.3"
criterion = { version = "2.10.1", package = "codspeed-criterion-compat", features = [
    "async_tokio",
] }
serial_test = "3.2.0"

[[bench]]
name = "oxen"
path = "src/benches/oxen.rs"
harness = false

[[test]]
name = "unit_tests"
path = "tests/test.rs"

[[test]]
name = "integration_tests"
path = "itests/http_tests.rs"

[package.metadata.cargo-machete]
ignored = ["astral-tokio-tar", "libduckdb-sys"]
