[package]
name = "oxen"
version = "0.34.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "oxen"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0" }
pyo3-async-runtimes = { version = "0.22", features = [
    "attributes",
    "async-std-runtime",
    "tokio-runtime",
] }
# pyo3-asyncio = { version = "0.22.0", features = ["attributes", "tokio-runtime"] }
# pyo3-asyncio = { git = "https://github.com/kcking/pyo3-asyncio.git", rev = "ab8ad9a1dbd3a81d39c8133c415b3396772c1d37", features = ["attributes", "tokio-runtime"] }
log = "0.4.17"
pyo3-log = "0.11.0"
tokio = { version = "1", features = ["full"] }
pyo3-polars = { version = "0.19.0", features = ["dtype-full"] }
# polars = { version = "0.45.0", features = [
#     "lazy",
#     "parquet",
#     "json",
#     "ipc",
#     "ipc_streaming",
#     "dtype-full",
# ] }
reqwest = { version = "0.12.2", features = [
    "multipart",
    "json",
    "gzip",
    "stream",
] }
serde_json = "1.0.106"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
liboxen = "0.34.2"
# liboxen = { path = "../../Oxen/src/lib" }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = { version = "0.71.1", default-features = false, features = [
    "runtime",
] }
glob = "0.3"
pkg-config = { version = "0.3", optional = true }

[profile.release]
lto = true
