[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "oxenai"
description = "Data version control for machine learning"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pandas==2.0.1", 
    "polars==0.17.11",
    "pyarrow==12.0.0",
    "opencv-python==4.7.0.72",
    "numpy==1.24.3",
    "tqdm==4.65.0",
    "toml==0.10.2",
]



[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

