[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
version = "0.34.2"
name = "oxenai"
description = "Data version control for machine learning"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "fsspec",
    "pandas",
    "polars",
    "pyarrow",
    "requests",
    "toml",
    "tqdm",
]

[project.entry-points."fsspec.specs"]
oxen = "oxen.oxen_fs:OxenFS"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
