[package]
name = "dedup"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3"
clap = {version = "4.5.38", features = ["derive"] } 
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }
