[package]
name = "dedup"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
cargo = "0.88.0"
clap = {version = "4.5.38", features = ["derive"] } 
flamegraph = "0.6.8"
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.35.1"
thiserror = "2.0.12"
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }
