[package]
name = "oxen-cli"
version = "0.18.13"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
clap = { version = "4.2.7", features = ["cargo"] }
colored = "2.0.0"
dunce = "1"
env_logger = "0.11.3"
jwalk = "0.8.1"
glob = "0.3.1"
liboxen = { path = "../lib" }
minus = { version = "5.3.1", features = ["static_output", "search"] }
serde_json = "1.0.78"
time = { version = "0.3.20", features = ["serde"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "oxen"
path = "src/main.rs"
