[package]
name = "oxen-cli"
version = "0.24.4"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
bytesize = "1.1.0"
clap = { version = "4.2.7", features = ["cargo"] }
colored = "2.0.0"
dialoguer = "0.11.0"
dunce = "1"
env_logger = "0.11.3"
jwalk = "0.8.1"
glob = "0.3.1"
liboxen = { path = "../lib" }
minus = { version = "5.3.1", features = ["static_output", "search"] }
procinfo = "0.4.2"
serde_json = "1.0.78"
rocksdb = { version = "0.22.0", default-features = false, features = [
    "lz4",
    "snappy",
    "zstd",
    "zlib",
    "multi-threaded-cf",
] }
time = { version = "0.3.20", features = ["serde"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "oxen"
path = "src/main.rs"
