[package]
name = "oxen-cli"
version = "0.36.2"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
bytesize = "1.3.0"
clap = { version = "4.2.7", features = ["cargo", "derive"] }
colored = "2.0.0"
dialoguer = "0.11.0"
glob = "0.3.1"
liboxen = { path = "../lib" }
log = "0.4.20"
minus = { version = "5.3.1", features = ["static_output", "search"] }
serde_json = "1.0.78"
time = { version = "0.3.20", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
url = "2.4.1"
uuid = { version = "1.4.1", features = ["serde", "v4"] }

[[bin]]
name = "oxen"
path = "src/main.rs"
