[package]
name = "liboxen"
version = "0.9.3"
edition = "2021"
license-file = "LICENSE"
description = "Oxen is a fast, unstructured data version control, to help version datasets, written in Rust."
homepage = "https://oxen.ai"
repository = "https://github.com/Oxen-AI/Oxen"
readme = "README.md"
keywords = ["machine-learning", "AI", "version-control"]
categories = ["command-line-utilities", "science", "multimedia", "database", "computer-vision"]

[dependencies]
actix-files = "0.6.0"
actix-web = { version = "4", features = ["rustls"] }
approx = "0.5.1"
async-compression = { version = "0.4.0", features = ["futures-io", "gzip"] }
async-recursion = "1.0.0"
async-std = { version = "1.12.0", features = ["unstable"] }
async-tar = "0.4.2"
arrow-json = "41.0.0"
blocking = "=1.3.1"
bytecount = "0.6.3"
bytes = "1.2.1"
bytesize = "1.1.0"
bytevec = "0.2.0"
chrono = "0.4.22"
clap = { version = "4.2.7", features = ["cargo"] }
colored = "2.0.0"
comfy-table = "7.0.0"
deadqueue = "0.2.4"
derive_more = "0.99.17"
difference = "2.0.0"
dirs = "5.0.1"
dotenv = "0.15.0"
dunce = "1"
duckdb =  { version = "0.8.1", features = ["bundled"] }
env_logger = "0.10.0"
# ffmpeg-next = { version = "6.0.0", features = ["codec", "format"] }
filetime = "0.2.16"
flate2 = "1.0.23"
fs_extra = "1.2.0"
futures = "0.3"
futures-util = "0.3.21"
glob = "0.3.1"
http = "0.2.6"
ignore = "0.4"
image = "0.24.6"
indicatif = "0.17.1"
infer = "0.15.0"
itertools = "0.11.0"
jwalk = "0.8.1"
lazy_static = "1.4.0"
lofty = "0.16.0"
log = "0.4.17"
# magick_rust = "0.18.0"
mp4 = "0.14.0"
nom = "7.1.1"
num_cpus = "1.13.1"
par-stream = "0.10.2"
pluralizer = "0.4.0"
polars = { version = "0.34.0", features = ["lazy", "parquet", "json", "ipc", "ipc_streaming", "dtype-struct"] }
polars-sql = "0.34.0"
qsv-sniffer = "0.10.0"
rand = "0.8.5"
rayon = "1.7.0"
r2d2 = "0.8.10"
redis = { version = "0.23.2", features = ["r2d2"] }
reqwest = { version = "0.11.16", features = ["multipart", "json", "gzip", "stream"] }
rocksdb = { version = "0.21.0", default-features = false, features = ["lz4", "snappy", "zstd", "zlib"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.78"
serde_url_params = "0.2.1"
signal-hook = "0.3.13"
simdutf8 = "0.1.4"
sql_query_builder = { version = "1.1.4", features = ["postgresql"] }
sysinfo = "0.29.0"
tar = "0.4.38"
threadpool = "1.8.1"
time = { version = "0.3.20", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.8"
toml = "0.7.3"
unicode-truncate = "0.2.0"
url = "2.2.2"
urlencoding = "2.1.0"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
words-count = "0.1.5"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
mockito = "1.1.0"

[lib]
name = "liboxen"
path = "src/lib.rs"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
