[package]
name = "liboxen"
version = "0.36.3"
edition = "2021"
license-file = "LICENSE"
description = "Oxen is a fast, unstructured data version control, to help version datasets, written in Rust."
homepage = "https://oxen.ai"
repository = "https://github.com/Oxen-AI/Oxen"
readme = "README.md"
keywords = ["machine-learning", "AI", "version-control"]
categories = [
    "command-line-utilities",
    "science",
    "multimedia",
    "database",
    "computer-vision",
]

[features]
default = ["duckdb/bundled"]
docs = ["duckdb"]

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
approx = "0.5.1"
astral-tokio-tar = "0.5.2"
async-compression = { version = "0.4.2", features = [
    "futures-io",
    "gzip",
    "tokio",
] }
async-std = { version = "1.12.0", features = ["unstable"] }
async-trait = "0.1"
async-tar = "0.5.0"
arrow = "=53.4.0"
bincode = "1.3.3"
bytecount = "0.6.3"
bytes = "1.2.1"
bytesize = "1.3.0"
bytevec = "0.2.0"
chrono = "0.4.22"
colored = "2.0.0"
comfy-table = "7.1.1"
deadqueue = "0.2.4"
derive_more = { version = "1.0.0", features = ["full"] }
difference = "2.0.0"
dirs = "5.0.1"
dunce = "1"
libduckdb-sys = { version = "=1.1.1" }
duckdb = { package = "duckdb", version = "=1.1.1", default-features = false, optional = true, features = [
    "serde_json",
] }
env_logger = "0.11.3"
parking_lot = "0.12.1"
# ffmpeg-next = { version = "6.0.0", features = ["codec", "format"] }
fd-lock = "4.0.1"
filetime = "0.2.16"
flate2 = { version = "1.1.0", default-features = false, features = ["zlib-ng"] }
fs_extra = "1.2.0"
futures = "0.3"
futures-util = "0.3.21"
glob = "0.3.1"
http = "1.1.0"
humantime = "2.1.0"
ignore = "0.4"
image = "0.25.2"
indicatif = "0.17.1"
infer = "0.16.0"
itertools = "0.13.0"
jwalk = "0.8.1"
lazy_static = "1.4.0"
lofty = "0.22.2"
log = "0.4.17"
lru = "0.12.0"
# magick_rust = "0.18.0"
minus = { version = "5.3.1", features = ["static_output", "search"] }
mockito = "1.1.0"
mp4 = "0.14.0"
num_cpus = "1.13.1"
par-stream = { version = "0.10.2", features = ["runtime-tokio"] }
pluralizer = "0.4.0"
polars = { version = "0.45.0", features = [
    "lazy",
    "parquet",
    "json",
    "ipc",
    "ipc_streaming",
    "dtype-full",
] }
os_path = "0.8.0"
qsv-sniffer = "0.10.3"
rand = "0.8.5"
rayon = "1.7.0"
r2d2 = "0.8.10"
rmp-serde = "1.3.0"
redis = { version = "0.27.2", features = ["r2d2"] }
regex = "1.10.2"
reqwest = { version = "0.12.2", features = [
    "multipart",
    "json",
    "gzip",
    "stream",
] }
rocksdb = { version = "0.22.0", default-features = false, features = [
    "lz4",
    "snappy",
    "multi-threaded-cf",
] }
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.78"
serde_url_params = "0.2.1"
serde_with = "3.13.0"
simdutf8 = "0.1.4"
sha2 = "0.10.8"
sqlparser = "0.53.0"
sql_query_builder = { version = "2.1.0", features = ["postgresql"] }
sysinfo = "0.33.0"
tar = "0.4.44"
tempfile = "3.8.0"
time = { version = "0.3.20", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.8"
toml = "0.8.12"
url = "2.2.2"
urlencoding = "2.1.0"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
zip = "2.4.1"
pathdiff = "0.2.3"

[dev-dependencies]
serial_test = "3.2.0"

[lib]
name = "liboxen"
path = "src/lib.rs"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
features = ["duckdb"]                       # this is without "duckdb/bundled"
no-default-features = true

[package.metadata.cargo-machete]
ignored = ["astral-tokio-tar", "libduckdb-sys"]
