[package]
name = "oxen-server"
version = "0.18.16"
edition = "2021"

[dependencies]
actix-files = "0.6.0"
actix-http = "3.0.4"
actix-service = "2.0.2"
actix-multipart = "0.7.2"
actix-web = { version = "4", features = ["rustls"] }
actix-web-httpauth = "0.8.0"
bincode = "1.3.3"
bytesize = "1.1.0"
chrono = "0.4.19"
clap = { version = "4.2.7", features = ["cargo"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
dunce = "1"
duckdb = { version = "1.0.0", features = ["bundled"] }
env_logger = "0.11.3"
flate2 = "1.0.23"
futures = "0.3.21"
futures-util = "0.3.21"
hex = "0.4.3"
image = "0.24.8"
jsonwebtoken = "9.3.0"
liboxen = { path = "../lib" }
log = "0.4.17"
lru = "0.12.0"
os_path = "0.8.0"
polars = { version = "0.41.3", features = [
    "lazy",
    "parquet",
    "json",
    "ipc",
    "ipc_streaming",
    "dtype-full",
] }
r2d2 = "0.8.10"
rand = "0.8.0"
redis = { version = "0.26.1", features = ["r2d2"] }
rocksdb = { version = "0.22.0", default-features = false, features = [
    "lz4",
    "snappy",
    "zstd",
    "zlib",
] }
sanitize-filename = "0.5.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tar = "0.4.38"
time = { version = "0.3.20", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.8"
urlencoding = "2.1.3"
uuid = { version = "1.3.3", features = ["serde", "v4"] }


[[bin]]
name = "oxen-server"
path = "src/main.rs"
