[package]
name = "oxen-server"
version = "0.36.2"
edition = "2021"

[dependencies]
actix-files = "0.6.0"
actix-http = "3.0.4"
async-compression = { version = "0.4.0", features = ["tokio", "gzip"] }
astral-tokio-tar = "0.5"
url = "2.5.0"
actix-multipart = "0.7.2"
actix-web = { version = "4", features = ["rustls"] }
actix-web-httpauth = "0.8.0"
bytesize = "1.3.0"
clap = { version = "4.2.7", features = ["cargo"] }
derive_more = { version = "1.0.0", features = ["full"] }
dotenv = "0.15.0"
dunce = "1"
flate2 = { version = "1.1.0", default-features = false, features = ["zlib-ng"] }
futures-util = "0.3.21"
hex = "0.4.3"
jsonwebtoken = "9.3.0"
liboxen = { path = "../lib" }
log = "0.4.17"
lru = "0.12.0"
mime = "0.3.17"
os_path = "0.8.0"
percent-encoding = "2.1"
regex = "1.10.2"
rocksdb = { version = "0.22.0", default-features = false, features = [
    "lz4",
    "snappy",
    "multi-threaded-cf",
] }
sanitize-filename = "0.6.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tar = "0.4.44"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3.3", features = ["serde", "v4"] }

[dev-dependencies]
actix-multipart-test = "0.0.3"

[[bin]]
name = "oxen-server"
path = "src/main.rs"

[package.metadata.cargo-machete]
ignored = ["astral-tokio-tar"]
