[package]
name = "oxen-watcher"
version = "0.36.3"
edition = "2021"
license-file = "../../LICENSE"
description = "Filesystem watcher daemon for Oxen status acceleration"
homepage = "https://oxen.ai"
repository = "https://github.com/Oxen-AI/Oxen"

[[bin]]
name = "oxen-watcher"
path = "src/main.rs"

[dependencies]
liboxen = { path = "../lib" }
notify = "6.1"
tokio = { version = "1", features = ["full"] }
rmp-serde = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4.2", features = ["cargo", "derive"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
thiserror = "2.0"